--- a/settings.html
+++ b/settings.html
@@ -415,7 +415,14 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
             </div>        </div>
             <div class="wizard" style="border-bottom:5px solid white;max-width:800px;margin:auto">
                 <nav class="list-group list-group-flush">
-					<a id="media" style="background:aliceblue" class="list-group-item" href="javascript:toggle_children('media')">
+
+					<a id="media" style="background:aliceblue" class="list-group-item" href="chat.html">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
+                                <div id="media_caption" > LIVE CHATROOM!</div>
+                            </div><span class="badge badge-secondary">7</span>
+                        </div>
+                    </a> 					<a id="media" style="background:aliceblue" class="list-group-item" href="javascript:toggle_children('media')">
                         <div class="d-flex justify-content-between align-items-center">
                             <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
                                 <div id="media_caption" > + My Media</div>
@@ -426,7 +433,7 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 						<a style="background:#fbfbfb" id="albums" class="list-group-item" href="javascript:window.top.location.href='frame_albums.html'">
 							<div class="d-flex justify-content-between align-items-center">
 								<div><i class="fe-icon-tag mr-1 text-muted"></i>
-									<div class="d-inline-block text-uppercase ">My Albums</div>
+									<div class="d-inline-block text-uppercase" style="margin-left:25px">My Albums</div>
 								</div><span class="badge badge-secondary"></span>
 							</div>
 						</a>
